strappy: resolve col-layout issues
https://trello.com/c/QNAChd5u/1341-strappy-layout

--- a/app/assets/stylesheets/strappy_layout.sass
+++ b/app/assets/stylesheets/strappy_layout.sass
@@ -44,5 +44,8 @@ body.strappy-layout
   .nav-pills .nav-link.active, .nav-pills .show>.nav-link
     background-color: #3a68a2
 
+  #content_area
+    width: 100%
+
   #content_area .nav
     margin-top: 1em
